Added a new page,also adaptive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container header__block">
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
-                    <li class="header__item"><a href="#" class="header__link">Home</a></li>
+                    <li class="header__item"><a href="#" class="header__link active">Home</a></li>
                     <li class="header__item"><a href="#about" class="header__link">About</a></li>
                     <li class="header__item"><a href="#projects" class="header__link">Projects</a></li>
                     <li class="header__item"><a href="#contacts" class="header__link">Contact</a></li>
@@ -33,7 +33,7 @@
             <nav class="menu">
                 <ul class="menu__list list-reset">
                     <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+                    <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Projects</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
                 </ul>
@@ -75,7 +75,7 @@
                         chat and bring your digital ideas to&nbsp;life
                     </p>
                     <div class="about__block-link">
-                        <a href="#" class="about__link">More...</a>
+                        <a href="about.html" class="about__link">More...</a>
                     </div>
                 </div>
             </div>
