Added two pages Error and Projects,also added changes to css and js files

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="#" class="header__link active">Home</a></li>
-                    <li class="header__item"><a href="#about" class="header__link">About</a></li>
-                    <li class="header__item"><a href="#projects" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="#contacts" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="about.html" class="header__link">About</a></li>
+                    <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
 
@@ -34,8 +34,8 @@
                 <ul class="menu__list list-reset">
                     <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -85,10 +85,10 @@
                 <div class="projects__block">
                     <div class="projects__recent-block">
                         <h2 class="projects__title">Recent Projects</h2>
-                        <a href="#" class="projects__link">See all</a>
+                        <a href="projects.html" class="projects__link">See all</a>
                     </div>
                     <div class="projects__content">
-                        <a href="#" class="projects__card projects__card-portfolio">
+                        <a href="error.html" class="projects__card projects__card-portfolio">
                             <div class="projects__block-img portfolio">
                                 <img src="img/projects/portfolio.png" alt="Portfolio">
                             </div>
@@ -100,14 +100,14 @@
                                     in&nbsp;technologies such as&nbsp;HTML, CSS, JS&nbsp;and Figma.
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="img/projects/html.svg" alt="HTML">
-                                    <img src="img/projects/css.svg" alt="CSS">
-                                    <img src="img/projects/js.svg" alt="JavaScript">
-                                    <img src="img/projects/figma.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="projects__card projects__card-trinity">
+                        <a href="error.html" class="projects__card projects__card-trinity">
                             <div class="bkl projects__block-img">
                                 <img src="img/projects/Trinity.png" alt="Trinity">
                             </div>
@@ -119,15 +119,15 @@
                                     of&nbsp;technologies such as&nbsp;HTML, CSS, JS, PHP and Figma.
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="img/projects/html.svg" alt="HTML">
-                                    <img src="img/projects/css.svg" alt="CSS">
-                                    <img src="img/projects/js.svg" alt="JavaScript">
-                                    <img src="img/projects/php.svg" alt="PHP">
-                                    <img src="img/projects/figma.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="projects__card projects__card-rivo">
+                        <a href="error.html" class="projects__card projects__card-rivo">
                             <div class="rivo projects__block-img">
                                 <img src="img/projects/Rivo.png" alt="Rivo">
                             </div>
@@ -139,11 +139,11 @@
                                     and built using Gulp
                                 </p>
                                 <div class="projects__block-icon">
-                                    <img src="img/projects/html.svg" alt="HTML">
-                                    <img src="img/projects/css.svg" alt="CSS">
-                                    <img src="img/projects/js.svg" alt="JavaScript">
-                                    <img src="img/projects/php.svg" alt="PHP">
-                                    <img src="img/projects/figma.svg" alt="Figma">
+                                    <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                    <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                    <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
                         </a>
