--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
                     <li class="header__item"><a href="#about" class="header__link active">About</a></li>
-                    <li class="header__item"><a href="#projects" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="#contacts" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
     
@@ -34,8 +34,8 @@
                 <ul class="menu__list list-reset">
                     <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="#" class="menu__link active">About</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
