--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
                     <li class="header__item"><a href="#about" class="header__link active">About</a></li>
                     <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
     
@@ -35,7 +35,7 @@
                     <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="#" class="menu__link active">About</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
