--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,9 @@
     <title>MyPortfolio</title>
 </head>
 <body class="page__body">
+    <div class="preloader">
+        <div class="preloader__spinner"></div>
+    </div>
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
