Added 3 new pages as well as images

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <a href="projects.html" class="projects__link">See all</a>
                     </div>
                     <div class="projects__content">
-                        <a href="error.html" class="projects__card projects__card-portfolio">
+                        <a href="portfolio.html" class="projects__card projects__card-portfolio">
                             <div class="projects__block-img portfolio">
                                 <img src="img/projects/portfolio.png" alt="Portfolio">
                             </div>
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="error.html" class="projects__card projects__card-trinity">
+                        <a href="trinity.html" class="projects__card projects__card-trinity">
                             <div class="bkl projects__block-img">
                                 <img src="img/projects/Trinity.png" alt="Trinity">
                             </div>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="error.html" class="projects__card projects__card-rivo">
+                        <a href="rivo.html" class="projects__card projects__card-rivo">
                             <div class="rivo projects__block-img">
                                 <img src="img/projects/Rivo.png" alt="Rivo">
                             </div>
