--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                     <h1 class="projects__page-title about__page-title">Projects</h1>
                 </div>
                 <div class="projects__page-content" id="projects-content">
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="portfolio.html" class="projects__card projects__card-animation">
                         <div class="projects__block-img portfolio">
                             <img src="img/projects/portfolio.png" alt="Portfolio">
                         </div>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="trinity.html" class="projects__card projects__card-animation">
                         <div class="bkl projects__block-img">
                             <img src="img/projects/Trinity.png" alt="Trinity">
                         </div>
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="rivo.html" class="projects__card projects__card-animation">
                         <div class="rivo projects__block-img">
                             <img src="img/projects/Rivo.png" alt="Rivo">
                         </div>
