Added projects as well as changes to media queries and styles

--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="blanchard.html" class="projects__card projects__card-animation">
                         <div class="blanchard projects__block-img">
                             <img src="img/projects/Blanchard.png" alt="Blanchard">
                         </div>
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="evklid.html" class="projects__card projects__card-animation">
                         <div class="evklid projects__block-img">
                             <img src="img/projects/Evklid.png" alt="Evklid">
                         </div>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="recidiviz.html" class="projects__card projects__card-animation">
                         <div class="recidiviz projects__block-img">
                             <img src="img/projects/Recidiviz.png" alt="Recidiviz">
                         </div>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="robin.html" class="projects__card projects__card-animation">
                         <div class="robin projects__block-img">
                             <img src="img/projects/Robin.png" alt="Robin W">
                         </div>
@@ -202,27 +202,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
-                        <div class="robo projects__block-img">
-                            <img src="img/projects/Robo.png" alt="Robo School">
-                        </div>
-                        <div class="projects__card-text">
-                            <h3 class="projects__card-title">Robo School</h3>
-                            <span class="projects__technology">Frontend</span>
-                            <p class="projects__descr">
-                                The Robo School website is&nbsp;a&nbsp;one-page school website, HTML, CSS, JS&nbsp;and jQuery were used in&nbsp;this
-                                project.
-                            </p>
-                            <div class="projects__block-icon">
-                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
-                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
-                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="img/jquery_plain_wordmark_logo_icon_146445.svg" alt="jQuery">
-                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
-                            </div>
-                        </div>
-                    </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="vr.html" class="projects__card projects__card-animation">
                         <div class="vr projects__block-img">
                             <img src="img/projects/VR.png" alt="VR Nas">
                         </div>
@@ -242,7 +222,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="error.html" class="projects__card projects__card-animation">
+                    <a href="wave.html" class="projects__card projects__card-animation">
                         <div class="wave projects__block-img">
                             <img src="img/projects/W-Wave.png" alt="W-wave">
                         </div>
