--- a/blanchard.html
+++ b/blanchard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/settings.css">
     <link rel="stylesheet" href="css/font.css">
@@ -22,6 +23,8 @@
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
                     <li class="header__item"><a href="about.html" class="header__link">About</a></li>
                     <li class="header__item"><a href="projects.html" class="header__link active">Projects</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">News</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
                     <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
@@ -38,6 +41,8 @@
                     <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
@@ -164,8 +169,6 @@
                         Portfolio v1.0
                         © 2024 Alex
                     </small>
-                    <a target="_blank" href="https://icons8.com/icon/zfHRZ6i1Wg0U/figma">Figma</a> иконки от <a
-                        target="_blank" href="https://icons8.com">Icons8</a>
                 </div>
             </div>
         </div>
