--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/settings.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>MyPortfolio</title>
+    <title>AlexFrontEnd</title>
 </head>
 <body class="page__body">
     <div class="preloader">
@@ -22,9 +23,20 @@
                     <li class="header__item"><a href="#" class="header__link active">Home</a></li>
                     <li class="header__item"><a href="about.html" class="header__link">About</a></li>
                     <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">News</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
                     <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
+
+            <!-- <div class="header__block-language">
+                <select id="langSelect" onchange="changeLanguage()">
+                    <option value="en">English</option>
+                    <option value="ru">Русский</option>
+                    <option value="ro">Română</option>
+                </select>
+            </div> -->
+
 
             <div class="lightning"></div>
 
@@ -38,6 +50,8 @@
                     <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
@@ -58,11 +72,14 @@
                     I'm currently learning FrontEnd development
                 </p>
                 <div class="hero__block-link">
-                    <a href="https://www.instagram.com/" class="hero__link" target="_blank">
+                    <a href="https://www.instagram.com/alexandr_suhih/" class="hero__link" target="_blank">
                         <img src="img/instagram.svg" alt="Instagram">
                     </a>
                     <a href="https://github.com/SuhihAlex?tab=repositories" class="hero__link" target="_blank">
                         <img src="img/github.svg" alt="GitHub">
+                    </a>
+                    <a href="error.html" class="hero__link" target="_blank">
+                        <img src="img/linkedin.svg" alt="Linkedin">
                     </a>
                 </div>
             </div>
@@ -177,7 +194,7 @@
                         </div>
                         <div class="form__group">
                             <label class="form__label" for="message">Message</label>
-                            <textarea class="form__text"rea name="message" id="message" rows="4" required></textarea>
+                            <textarea class="form__text" name="message" id="message" rows="4" required></textarea>
                         </div>
                         <button class="form__btn" type="submit">Send</button>
                     </form>
@@ -201,13 +218,17 @@
                         <a href="https://github.com/SuhihAlex?tab=repositories" class="footer__link" target="_blank">
                             <img src="img/github.svg" alt="GitHub">
                         </a>
+                        <a href="mailto:suhih-alexandr@mail.ru" class="hero__link" target="_blank">
+                            <svg class="mail" xmlns="http://www.w3.org/2000/svg" width="58" height="58" viewBox="0 0 24 24">
+                                <path
+                                    d="M3.84674576,17.8602756 C4.0442161,17.955959 4.26584099,18.0096122 4.49999728,18.0096122 L19.5,18.0096122 C19.734157,18.0096122 19.9557825,17.9559587 20.1532533,17.8602747 L14.2446247,12.2992125 L12.3178536,13.8859651 C12.1332257,14.0380116 11.8667743,14.0380116 11.6821464,13.8859651 L9.75537533,12.2992125 L3.84674576,17.8602756 L3.84674576,17.8602756 Z M3.1430925,17.1498223 C3.1477226,17.1451097 3.15246435,17.1404678 3.15731765,17.1359 L8.97720082,11.6583629 L3.18214637,6.88596512 C3.16950983,6.87555855 3.15751523,6.86466152 3.14616744,6.85332433 C3.05246763,7.04913384 2.99999728,7.26843937 2.99999728,7.5 L2.99999728,16.5096122 C2.99999728,16.7386275 3.05132045,16.9556556 3.1430925,17.1498223 L3.1430925,17.1498223 Z M20.8569057,17.1498204 C20.9486772,16.9556542 21,16.7386268 21,16.5096122 L21,7.5 C21,7.26844009 20.94753,7.04913522 20.8538307,6.85332617 C20.8424835,6.86466269 20.8304895,6.87555911 20.8178536,6.88596512 L15.0227992,11.6583629 L20.8426823,17.1359 C20.847535,17.1404672 20.8522762,17.1451085 20.8569057,17.1498204 L20.8569057,17.1498204 Z M20.1444281,6.14509696 C19.9491886,6.05206979 19.7306751,6 19.5,6 L4.49999728,6 C4.26932289,6 4.05080997,6.05206949 3.85557086,6.14509614 L12,12.8522731 L20.1444281,6.14509696 L20.1444281,6.14509696 Z M4.49999728,5 L19.5,5 C20.8807119,5 22,6.11928813 22,7.5 L22,16.5096122 C22,17.8903241 20.8807119,19.0096122 19.5,19.0096122 L4.49999728,19.0096122 C3.11928541,19.0096122 1.99999728,17.8903241 1.99999728,16.5096122 L1.99999728,7.5 C1.99999728,6.11928813 3.11928541,5 4.49999728,5 Z" />
+                            </svg>
+                        </a>
                     </div>
                     <small>
                         Portfolio v1.0
                         © 2024 Alex
                     </small>
-                    <a target="_blank" href="https://icons8.com/icon/zfHRZ6i1Wg0U/figma">Figma</a> иконки от <a target="_blank"
-                        href="https://icons8.com">Icons8</a>
                 </div>
             </div>
         </div>
