Added a logo + updated the burger menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>AlexFrontEnd</title>
+    <title>ASFrontEnd</title>
 </head>
 <body class="page__body">
     <div class="preloader">
@@ -18,24 +18,28 @@
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
+            <a href="#" class="logo">
+                <img src="img/logo-min.svg" alt="Logo">
+            </a>
+
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="#" class="header__link active">Home</a></li>
                     <li class="header__item"><a href="about.html" class="header__link">About</a></li>
                     <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">News</a></li>
+                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
                     <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
                     <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
                 </ul>
             </nav>
 
-            <!-- <div class="header__block-language">
-                <select id="langSelect" onchange="changeLanguage()">
-                    <option value="en">English</option>
-                    <option value="ru">Русский</option>
-                    <option value="ro">Română</option>
+            <div class="header__block-language">
+                <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
+                    <option class="header__language-lang active" value="en">EN</option>
+                    <option class="header__language-lang" value="ru">RU</option>
+                    <option class="header__language-lang" value="ro">RO</option>
                 </select>
-            </div> -->
+            </div>
 
 
             <div class="lightning"></div>
@@ -46,11 +50,12 @@
                 <div class="burger__bar"></div>
             </div>
             <nav class="menu">
+
                 <ul class="menu__list list-reset">
                     <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
                     <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
