--- a/blanchard.html
+++ b/blanchard.html
@@ -23,7 +23,7 @@
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
                     <li class="header__item"><a href="about.html" class="header__link">About</a></li>
                     <li class="header__item"><a href="projects.html" class="header__link active">Projects</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">News</a></li>
+                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
                     <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
                     <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
                 </ul>
@@ -41,7 +41,7 @@
                     <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
                     <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
                     <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
                 </ul>
