--- a/about_ru.html
+++ b/about_ru.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +20,12 @@
         <div class="container header__block">
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
-                    <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
-                    <li class="header__item"><a href="#" class="header__link active">About me</a></li>
-                    <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
-                    <li class="header__item"><a href="contacts.html" class="header__link">Contact</a></li>
+                    <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
+                    <li class="header__item"><a href="#" class="header__link active">Обо мне</a></li>
+                    <li class="header__item"><a href="projects.html" class="header__link">Проекты</a></li>
+                    <li class="header__item"><a href="news.html" class="header__link">Новости</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link">Блог</a></li>
+                    <li class="header__item"><a href="contacts.html" class="header__link">Контакты</a></li>
                 </ul>
             </nav>
     
@@ -38,12 +38,12 @@
             </div>
             <nav class="menu">
                 <ul class="menu__list list-reset">
-                    <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link active">About me</a></li>
-                    <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
-                    <li class="menu__item"><a href="contacts.html" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="index.html" class="menu__link">Главная</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link active">Обо мне</a></li>
+                    <li class="menu__item"><a href="projects.html" class="menu__link">Проекты</a></li>
+                    <li class="menu__item"><a href="news.html" class="menu__link">Новости</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link">Блог</a></li>
+                    <li class="menu__item"><a href="contacts.html" class="menu__link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -53,7 +53,7 @@
         <section class="about__page">
             <div class="container">
                 <div class="about__page-block--title">
-                    <h1 class="about__page-title">About me</h1>
+                    <h1 class="about__page-title">Обо мне</h1>
                 </div>
                 <div class="about__page-block--content block">
                     <div class="about__page-block--img">
@@ -61,17 +61,10 @@
                     </div>
                     <div class="about__page-content">
                         <p class="about__page-content--descr">
-                            I&rsquo;m Alex, FrontEnd Development. My&nbsp;passion lies in&nbsp;creating user-centred experiences
-                            as&nbsp;a&nbsp; <span>UI/UX designer and frontend developer</span>. With a&nbsp;keen attention to&nbsp;detail and a&nbsp;love for
-                            clean code, I&nbsp;specialise in&nbsp;building high-performance websites and applications. <span>My&nbsp;experience spans
-                            HTML, CSS, JavaScript, Node.js, Gulp, Sass, jQuery, and Bootstrap</span>. From concept to&nbsp;implementation, I&nbsp;strive
-                            to&nbsp;create digital experiences that seamlessly blend functionality and aesthetics. <span>My&nbsp;journey is&nbsp;not
-                            limited to&nbsp;just coding</span>. Collaboration is&nbsp;at&nbsp;the heart of&nbsp;my&nbsp;approach, as&nbsp;I believe the
-                            best results are achieved through teamwork and communication. Outside the realm of&nbsp;technology, I&nbsp;find solace
-                            in&nbsp;creative pursuits. Graphic design brings out my&nbsp;creativity in&nbsp;the digital realm. And when&nbsp;I need
-                            to&nbsp;recharge, you&rsquo;ll often find me&nbsp;playing video games. So&nbsp;whether you&rsquo;re looking for
-                            an&nbsp; <span>experienced developer, creative designer or&nbsp;team player</span>, I&rsquo;m ready to&nbsp;bring your digital ideas
-                            to&nbsp;life. Let&rsquo;s embark on&nbsp;an&nbsp;exciting innovation journey together!
+                            Я&nbsp;Александр, увлекаюсь созданием ориентированных на&nbsp;пользователя решений. Я&nbsp;специализируюсь
+                            на&nbsp;UI/UX-дизайне, фронтенд-разработке и&nbsp;графическом дизайне, владею HTML, CSS, JavaScript, Node.js, Gulp,
+                            Sass, jQuery и&nbsp;Bootstrap. Я&nbsp;очень люблю сотрудничать. Помимо кодирования, я&nbsp;люблю графический дизайн
+                            и&nbsp;видеоигры. Давайте общаться и&nbsp;воплощать ваши цифровые идеи в&nbsp;жизнь.
                         </p>
                         <a href="other/resume.pdf" class="about__page-download">
                             <svg width="20" height="25" viewBox="0 0 20 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,14 +73,14 @@
                                     fill="" />
                             </svg>
     
-                            Download Resume
+                            Скачать резюме
                         </a>
                     </div>
                 </div>
                 <div class="about__page-block">
                     <div class="about__page-block--skills">
                         <div class="about__page-title--block">
-                            <h4 class="about__page-title--name">Skills</h4>
+                            <h4 class="about__page-title--name">Скиллы</h4>
                         </div>
                         <div class="about__page-skills">
                             <img src="img/file_type_html_icon_130541.svg" alt="HTML">
@@ -141,7 +134,7 @@
                     </small>
                     <div class="header__block-language">
                         <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
-                            <option class="header__language-lang active" value="en">EN</option>
+                            <option class="header__language-lang" value="en">EN</option>
                             <option class="header__language-lang" value="ru">RU</option>
                             <option class="header__language-lang" value="ro">RO</option>
                         </select>
